tests/snapshots/snapshot_codegen__snapshot_dot_shorthand.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
function __zenEq(a: unknown, b: unknown): boolean {
  if (a === b) return true;
  if (a == null || b == null) return false;
  if (typeof a !== "object" || typeof b !== "object") return false;
  const ka = Object.keys(a as object);
  const kb = Object.keys(b as object);
  if (ka.length !== kb.length) return false;
  return ka.every((k) => __zenEq((a as Record<string, unknown>)[k], (b as Record<string, unknown>)[k]));
}

const names = todos.map((_x) => _x.text);

const active = todos.filter((_x) => __zenEq(_x.done, false));

const byName = [...users].sort((a, b) => ((_x) => _x.name)(a) - ((_x) => _x.name)(b));

const found = items.filter((_x) => !__zenEq(_x.id, id));

const big = items.filter((_x) => _x.size > 100);
