tests/snapshots/snapshot_codegen__snapshot_for_blocks.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
type User = { name: string; age: number; active: boolean };

function display(self: User): string {
  return `${self.name} (${self.age})`;
}
function isAdult(self: User): boolean {
  return self.age >= 18;
}
function greet(self: User, greeting: string): string {
  return `${greeting}, ${self.name}!`;
}

function adults(self: Array<User>): Array<User> {
  return self.filter((_x) => _x.age >= 18);
}

const _filtered = [{ name: "Ryan", age: 25, active: true }].filter((_x) => _x.active);

const _arrLen = [1, 2, 3].length;

const _strLen = "hello".length;
