tests/snapshots/snapshot_codegen__snapshot_functions.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
export function add(a: number, b: number): number {
  return a + b;
}

function _greet(name: string, greeting: string = "Hello"): string {
  return `${greeting}, ${name}!`;
}

const _double = (n: number) => n * 2;
