tests/snapshots/snapshot_codegen__snapshot_jsx_component.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
import { useState, JSX } from "react";

export function Counter(): JSX.Element {
  const [_count, setCount] = useState(0);
  return <div><h1>Count</h1><button onClick={setCount}>Increment</button></div>;
}
