tests/snapshots/snapshot_codegen__snapshot_match_expr.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
type Route = { tag: "Home" } | { tag: "Profile"; id: string } | { tag: "NotFound" };

const route = { tag: "Home" };

const _page = route.tag === "Home" ? "home" : route.tag === "Profile" ? (() => { const id = route.value; return id; })() : route.tag === "NotFound" ? "404" : (() => { throw new Error("non-exhaustive match"); })();
