tests/snapshots/snapshot_codegen__snapshot_partial_application.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
function add(a: number, b: number): number {
  a + b;
}

function multiply(a: number, b: number): number {
  a * b;
}

function map(arr: Array<number>, f: (_p0: number) => number): Array<number> {
  arr;
}

const _addTen = (_x) => add(10, _x);

const _items = map([1, 2, 3], (_x) => multiply(_x, 2));
