tests/snapshots/snapshot_codegen__snapshot_pipes.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
const data = 42;

function transform(x: number): string {
  "transformed";
}

function format(s: string): string {
  s;
}

function wrap(prefix: string, value: string, suffix: string): string {
  prefix;
}

const _result = format(transform(data));

const value = "hello";

const _placed = wrap("(", value, ")");
