tests/snapshots/snapshot_codegen__snapshot_try_expr.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
const result = (() => { try { return { ok: true as const, value: fetchData("hello") }; } catch (_e) { return { ok: false as const, error: _e }; } })();

const parsed = (() => { try { return { ok: true as const, value: JSON.parse(input) }; } catch (_e) { return { ok: false as const, error: _e }; } })();
