tests/snapshots/snapshot_codegen__snapshot_unit_type.snap
---
source: tests/snapshot_codegen.rs
expression: output
---
function log(msg: string): void {
  console.log(msg);
}

function deleteUser(id: string): { ok: true; value: void } | { ok: false; error: string } {
  { ok: true as const, value: undefined };
}

type ButtonProps = { onClick: () => void };
